[gd_scene load_steps=2 format=2]

[ext_resource path="res://Slaap.gd" type="Script" id=1]

[node name="Slaap" type="Node2D"]
script = ExtResource( 1 )

[node name="Slaaptimer" type="Timer" parent="."]
wait_time = 2.2
autostart = true

[node name="SlaapKnop" type="Button" parent="."]
margin_left = 54.0
margin_top = 47.0
margin_right = 127.0
margin_bottom = 80.0

[node name="Status" type="RichTextLabel" parent="."]
margin_left = 10.0
margin_top = 7.0
margin_right = 109.0
margin_bottom = 44.0

[node name="Strafpunten" type="RichTextLabel" parent="."]
margin_left = 117.0
margin_top = 8.0
margin_right = 200.0
margin_bottom = 40.0

[node name="Tijd" type="RichTextLabel" parent="."]
margin_left = 7.0
margin_top = 76.0
margin_right = 47.0
margin_bottom = 116.0

[node name="InBed" type="RichTextLabel" parent="."]
margin_left = 131.0
margin_top = 82.0
margin_right = 212.0
margin_bottom = 117.0

[connection signal="timeout" from="Slaaptimer" to="." method="_on_Slaaptimer_timeout"]
[connection signal="pressed" from="SlaapKnop" to="." method="_on_SlaapKnop_pressed"]
